<resources>
    <string name="app_name">NR2020</string>
    <string name="a">a</string>
    <string name="info_indo">Kalkulator Pembelajaran Fisika NR 2020 ini dibuat dan dikembangkan untuk membantu siswa SMA dan atau mahasiswa baru dalam menyelesaikan soal-soal fisika. Kalkulator ini menuntun untuk menemukan persamaan yang digunakan. Suatu soal fisika mungkin terdiri banyak konsep yang berkaitan, sehingga persamaan yang digunakan bisa lebih dari dua (soal berbasis HOTS). Persamaan yang digunakan ditampilkan, dan juga persamaan akhir yang digunakan. Siswa diharapkan menuliskan persamaan dari besaran yang dicari, baru dimasukan nilai dari masing-masing variable dari persamaan tersebut. Contoh, F = m*a, besaran yang ditanyakan a, maka nyatkan persamaan menjadi: a = F/m. Cara demikian akan membantu mengurangi kemungkinan salah hitung.</string>
    <string name="info_indo2">Setiap besaran yang diketahui juga diberi keterangan satuannya, begitu juga hasil perhitungan suatu besaran juga disertai satuannya. Struktur kalkulator ini mengikuti struktur penyelesaian soal fisika, yaitu diketahui besaran-besaran, ditanyakan dan penyelesaian atau solusi. Dalam satu bab tertentu, kalkulator dapat digunakan untuk berbagai macam soal, shingga tersedia banyak variable/besaran. Variabel ini harus diisi semua sesuai soal yang diketahui. Bila dalam soal tidak dikatahui maka diisi nol. Bila ada variable yang tidak diisi maka kalkulator tidak bisa digunakan. Jumlah variabel bisa mencapai 15, oleh karena itu diberi kemudahan seting nol. Seting nol berfungsi untuk mengisi semua variable menjadi nol. Setelah itu nilai variable yang diketahui diisikan sesuai satuan yang tertera {setelah diisi angka, satuan yang tampak samar akan hilang)</string>
    <string name="info_indo3">Bila kalkulator akan digunakan menyelesaian soal yang lain dalam bab yang sama, maka tekan Hapus untuk menghapus semua nilai variable termasuk hasil hitungan sebelumnya. Kalkulator ini dibuat sebagai panduan menyelsaikan soal fisika dan jangan disalahgunakan, yaitu menggantungkan jawaban dari kalkulator. Pandang kalkulator ini sebagai kunci jawaban, tetapi anda harus mengerjakan sendiri secara manual untuk bisa menyelesaikan soal fisika</string>
    <string name="keterangan">Keterangan :</string>
    <string name="info_indo4">1. Alfa : sudut Antara gaya dan arah perpindahan.</string>
    <string name="info_indo5">2. Teta : sudut bidang miring terhadap lantai.</string>
    <string name="info_indo6">3. W : ada dua kemungkinan, work (usaha: joule) dan Weight (berat: N) : maka perhatikan satuannya!</string>
    <string name="info_indo7">4. Bila Varibel berindeks dan diketahui hanya satu, maka gunakan indeks 1 atau a, contoh: m1, ma, v1, va dan seterusnya. Informasi lebih lanjut ada pada setiap kalkulator</string>
    <string name="info_indo8">Selamat belajar Fisika bersama Kalkulator Fisika NR2020.</string>
    <string name="info_indo9">#Dilarang menggandakan kalkulator Fisika NR2020 tanpa izin# #Kalkulator Fisika NR2020 dibuat oleh : Nur Untoro, Program Studi Pendidikan Fisika Fakultas Ilmu Tarbiyah dan Keguruan UIN Sunan Kalijaga Yogyakarta dan Muhammad Ramdhan Program Studi Pendidikan Fisika Fakultas Keguruan dan Ilmu Pendidikan UAD Yogyakarta.# Yogyakarta, 17 Januari 2020</string>
    <string name="info_indo10">#UI/UX Oleh: Muhammad Ramdhan, Program Studi Pendidikan Fisika - FKIP - Universitas Ahmad Dahlan</string>


    <string name="info_en">This NR 2020 Physics Learning Calculator was created and developed to help high school students and or freshmen in solving physics problems. This calculator leads to finding the equation used. A physics problem may consist of many related concepts, so the equations used can be more than two (HOTS-based problems). The equation used is displayed, as well as the final equation used. Students are expected to write the equation of the quantity they are looking for, then enter the value of each variable from the equation. For example, F = m*a, the quantity in question is a, so write the equation as: a = F/m. This will help reduce the possibility of miscalculation.</string>
    <string name="info_en2">Each known quantity is also given a description of its unit, as well as the calculation result of a quantity is also accompanied by its unit. The structure of this calculator follows the structure of solving physics problems, namely known quantities, questions and solutions or solutions. In one particular chapter, the calculator can be used for a variety of problems, so there are many variables / magnitudes available. These variables must be filled in according to the known problem. If the question is not known then it is filled with zero. If there are variables that are not filled in, the calculator cannot be used. The number of variables can reach up to 15, hence the convenience of setting zero. Setting zero serves to fill all variables to zero. After that, the known variable values are filled in according to the units listed {after filling in the numbers, the units that appear vague will disappear).</string>
    <string name="info_en3">If the calculator will be used to solve other problems in the same chapter, then press Clear to delete all variable values including the results of previous calculations. This calculator is made as a guide to solve physics problems and should not be misused, that is, depending on the answer from the calculator. View this calculator as an answer key, but you must work on your own manually to be able to solve physics problems.</string>
    <string name="keterangan_en">Description :</string>
    <string name="info_en4">1. Alpha: the angle between the force and the direction of displacement.</string>
    <string name="info_en5">2. Teta: the angle of the inclined plane with respect to the floor.</string>
    <string name="info_en6">3. W : there are two possibilities, work (effort: joule) and Weight (weight: N) : so note the units!</string>
    <string name="info_en7">4. If the variable is indexed and only one is known, then use index 1 or a, for example: m1, ma, v1, va and so on. More information is available on each calculator</string>
    <string name="info_en8">Have fun learning Physics with NR2020 Physics Calculator.</string>
    <string name="info_en9">#Unauthorised duplication of NR2020 Physics calculator is prohibited# NR2020 Physics calculator is made by : Nur Untoro, Physics Education Department, Faculty of Tarbiyah and Keguruan Sciences, UIN Sunan Kalijaga Yogyakarta and Muhammad Ramdhan, Physics Education Department, Faculty of Teacher Training and Education, UAD Yogyakarta# Yogyakarta, 17 January 2020.</string>
    <string name="info_en10">#UI/UX By: Muhammad Ramdhan, Physics Education Study Programme - FKIP - Ahmad Dahlan University</string>
    <string name="en">EN</string>
    <string name="indo">ID</string>
</resources>
