<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#56C4C5"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".InformasiProduk"
    tools:ignore="ExtraText">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/btn_Info"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/tombolhijau"
                    android:gravity="center"
                    android:text="Informasi Produk"
                    android:textAllCaps="false"
                    android:layout_weight="4"
                    android:textColor="#000000"
                    android:layout_marginRight="10dp"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/btn_lang"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/tombolhijau"
                    android:backgroundTint="#F06292"
                    android:gravity="center"
                    android:text="@string/indo"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="30sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvtampilan1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/tombolhijau"
                android:gravity="center|start"
                android:justificationMode="inter_word"
                android:text="@string/info_indo"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvtampilan2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtampilan1"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/tombolhijau"
                android:gravity="center|start"
                android:justificationMode="inter_word"
                android:text="@string/info_indo2"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvtampilan3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtampilan2"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/tombolhijau"
                android:gravity="center|start"
                android:justificationMode="inter_word"
                android:text="@string/info_indo3"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvtampilan4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtampilan3"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/tombolhijau"
                android:gravity="center|start"
                android:justificationMode="inter_word"
                android:text="@string/keterangan"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvtampilan5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtampilan4"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/tombolhijau"
                android:gravity="center|start"
                android:justificationMode="inter_word"
                android:text="@string/info_indo4"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvtampilan6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtampilan5"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/tombolhijau"
                android:gravity="center|start"
                android:justificationMode="inter_word"
                android:text="@string/info_indo5"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvtampilan7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtampilan6"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/tombolhijau"
                android:gravity="center|start"
                android:justificationMode="inter_word"
                android:text="@string/info_indo6"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvtampilan8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtampilan7"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/tombolhijau"
                android:gravity="center|start"
                android:justificationMode="inter_word"
                android:text="@string/info_indo7"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvtampilan9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtampilan8"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/tombolhijau"
                android:gravity="center|start"
                android:justificationMode="inter_word"
                android:text="@string/info_indo8"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvtampilan10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtampilan9"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/tombolhijau"
                android:gravity="start"
                android:justificationMode="inter_word"
                android:text="@string/info_indo9"
                android:textColor="#0A0A0A"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvtampilan11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtampilan10"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/tombolhijau"
                android:gravity="center|start"
                android:justificationMode="inter_word"
                android:text="@string/info_indo10"
                android:textColor="#000000"
                android:textSize="25sp" />


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>